# wingpanel-indicator-keyboard

./: CMakeLists.txt  meson.build
data/: meson.build
icons/: CMakeLists.txt
po/: ru.po
src/: CMakeLists.txt  DisplayWidget.vala  IconWidget.vala  Indicator.vala
