install_data(
    join_paths('icons', 'english-symbolic.svg'),
    install_dir: join_paths(get_option('datadir'), 'icons', 'elementary', 'status', 'symbolic')
)
install_data(
    join_paths('icons', 'russian-symbolic.svg'),
    install_dir: join_paths(get_option('datadir'), 'icons', 'elementary', 'status', 'symbolic')
)
